# LLM-

./: .gitignore  CLAUDE.md  PROJECT_FLOW.md  README.md  install.cmd  install.ps1  plan.md  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  security-auditor.md
.claude/commands/: deploy.md  fix-issue.md  review.md
.claude/rules/: api-conventions.md  code-style.md  testing.md
agent/: __init__.py  __main__.py  config.py  main.py  orchestrator.py
agent/llm/: __init__.py  gateway.py  prompts.py
agent/nodes/: design.py  implement.py  repair.py  test.py
agent/tools/: code_executor.py  file_manager.py  test_runner.py
benchmarks/: run_benchmark.py
benchmarks/cases/case1_calculator/: requirements.md
benchmarks/cases/case2_student_grades/: requirements.md
benchmarks/cases/case2_user_mgmt/: requirements.md
benchmarks/cases/case3_order_state/: requirements.md
benchmarks/cases/case4_scheduler/: requirements.md
benchmarks/cases/case4_url_shortener/: requirements.md
benchmarks/cases/case5_task_scheduler/: requirements.md
benchmarks/cases/case5_todo_api/: requirements.md
benchmarks/cases/case6_todo_api/: requirements.md
benchmarks/cases/case7_todo_web/: requirements.md
